# cats

./: .pre-commit-config.yaml  conftest.py  pyproject.toml  requirements.txt  tox.ini
cats/: __init__.py  coords.py  data.py  photometry.py
cats/pawprint/: __init__.py  connect.py  core.py  pawprint.py
cats/pawprint/footprint/: __init__.py  _footprint.py  base.py  cmd.py  pm.py  sky.py
cats/pawprint/io/: __init__.py  asdf.py  galstreams.py
cats/star/: __init__.py  star.py
notebooks/: IO tests.ipynb  Stream-data-pipeline.ipynb  Stream-subset-Gaia-data.ipynb  pawprint_demo.ipynb
